--- a/templates/index.j2
+++ b/templates/index.j2
@@ -99,6 +99,7 @@
 
         <div class="copyright">
             <p>本站所有图片均来自<a rel="nofollow" href="http://cn.bing.com" target="_blank">必应搜索</a></p>
+            <span id="finicount_views"></span>
             <p>Copyright &copy;
                 <a href="https://blog.horrordor.tk/" target="_blank">horrordor</a>
             </p>
@@ -122,6 +123,7 @@
             }
         });
     </script>
+    <script async src="//finicounter.eu.org/finicounter.js"></script>
 </body>
 
 </html>
