--- a/templates/map.j2
+++ b/templates/map.j2
@@ -2,7 +2,7 @@
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
     {% for i in pages %}
         <url>
-            <loc>https://bing.horrordor.tk/{{i.loc}}</loc>
+            <loc>https://souga.eu.org/{{i.loc}}</loc>
             <lastmod>{{date}}</lastmod>
             <changefreq>daily</changefreq>
             <priority>0.8</priority>
@@ -10,7 +10,7 @@
     {% endfor %}
     {% for i in items %}
         <url>
-            <loc>https://bing.horrordor.tk/{{i.loc}}</loc>
+            <loc>https://souga.eu.org/{{i.loc}}</loc>
             <lastmod>{{date}}</lastmod>
             <changefreq>daily</changefreq>
             <priority>0.6</priority>
@@ -18,7 +18,7 @@
     {% endfor %}
     
     <url>
-        <loc>https://bing.horrordor.tk/</loc>
+        <loc>https://souga.eu.org/</loc>
         <lastmod>{{date}}</lastmod>
         <changefreq>daily</changefreq>
         <priority>1.0</priority>
